--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^16.9.0",
     "react": "^16.9.2",
     "react-dom": "^16.9.2",
+    "rimraf": "^3.0.2",
     "rollup": "^1.26.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
